# samp-plugin-json

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: json.inc
include/json/: commom.h  json.h  json_pool.h  nloman_json.hpp  utils.h
json/: CMakeLists.txt  Native.cpp  Native.h  json.cpp  json_pool.cpp  main.cpp  utils.cpp
lib/sdk/: amxplugin.cpp  plugin.cpp  plugin.h  plugincommon.h
samp-plugin-json/: CMakeLists.txt  samp-plugin-json.cpp  samp-plugin-json.h
sampsvr/: Makefile  crashinfo.txt  server.cfg  server_log.txt
sampsvr/gamemodes/: gamemode.amx
sampsvr/src/: gamemode.pwn
